fixed theme-changer on mobile

--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -61,6 +61,10 @@
     width: 40px;
     height: 40px;
 
+    &:hover {
+      opacity: 1;
+    }
+
     &_shadow-light {
       box-shadow: none;
     }
